[gd_scene load_steps=12 format=3 uid="uid://bhxv2dh46af7j"]

[ext_resource type="Script" path="res://scripts/misc/main_sheep.gd" id="1_6btih"]
[ext_resource type="Script" path="res://scripts/misc/game_manager.gd" id="2_usnlm"]
[ext_resource type="Material" uid="uid://t8ek8x36aomn" path="res://shaders/pause.tres" id="3_t4tcm"]
[ext_resource type="PackedScene" uid="uid://c36au6a2n2ydq" path="res://scenes/machines/press_machine.tscn" id="4_0cgrm"]
[ext_resource type="PackedScene" uid="uid://dbc8qbdp6moww" path="res://scenes/machines/mangler_machine.tscn" id="5_u21o0"]
[ext_resource type="PackedScene" uid="uid://etghli8183xh" path="res://scenes/machines/oven_machine.tscn" id="6_bl2p0"]
[ext_resource type="PackedScene" uid="uid://c6avlnb01vhue" path="res://scenes/machines/deliver_machine.tscn" id="7_ut65l"]
[ext_resource type="PackedScene" uid="uid://cqcvf6587433b" path="res://scenes/machines/injector_machine.tscn" id="8_2uxys"]
[ext_resource type="PackedScene" uid="uid://bvadovdh4j23l" path="res://scenes/reports/user_manual.tscn" id="9_ocgc5"]
[ext_resource type="PackedScene" uid="uid://5dwphybk2qid" path="res://scenes/specimen/sheep.tscn" id="9_rrcwd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ne1mv"]
bg_color = Color(0.105882, 0.0823529, 0.0823529, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_6btih")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_usnlm")

[node name="Inventory" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Inventory"]

[node name="Control" type="Control" parent="Inventory/CanvasLayer"]
light_mask = 2
visibility_layer = 2
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -147.0
offset_right = 192.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="Inv1" type="Panel" parent="Inventory/CanvasLayer/Control"]
light_mask = 2
visibility_layer = 2
custom_minimum_size = Vector2(95, 96)
layout_mode = 0
offset_right = 95.0
offset_bottom = 96.0
size_flags_horizontal = 3

[node name="Inv2" type="Panel" parent="Inventory/CanvasLayer/Control"]
light_mask = 2
visibility_layer = 2
custom_minimum_size = Vector2(95, 96)
layout_mode = 0
offset_left = 96.0
offset_right = 191.0
offset_bottom = 96.0
size_flags_horizontal = 3

[node name="Inv3" type="Panel" parent="Inventory/CanvasLayer/Control"]
light_mask = 2
visibility_layer = 2
custom_minimum_size = Vector2(95, 96)
layout_mode = 0
offset_left = 192.0
offset_right = 287.0
offset_bottom = 96.0
size_flags_horizontal = 3

[node name="Inv4" type="Panel" parent="Inventory/CanvasLayer/Control"]
light_mask = 2
visibility_layer = 2
custom_minimum_size = Vector2(95, 96)
layout_mode = 0
offset_left = 288.0
offset_right = 383.0
offset_bottom = 96.0
size_flags_horizontal = 3

[node name="Pause" type="Node" parent="."]

[node name="PauseLayer" type="CanvasLayer" parent="Pause"]
layer = 2

[node name="Control" type="Control" parent="Pause/PauseLayer"]
light_mask = 2
visibility_layer = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BGBlur" type="ColorRect" parent="Pause/PauseLayer/Control"]
visible = false
material = ExtResource("3_t4tcm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseBox" type="Panel" parent="Pause/PauseLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -162.5
offset_right = 175.0
offset_bottom = 162.5
grow_horizontal = 2
grow_vertical = 2

[node name="PauseContainer" type="VBoxContainer" parent="Pause/PauseLayer/Control/PauseBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -137.5
offset_right = 150.0
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Resume" type="Button" parent="Pause/PauseLayer/Control/PauseBox/PauseContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ne1mv")
text = "Resume"

[node name="Settings" type="Button" parent="Pause/PauseLayer/Control/PauseBox/PauseContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ne1mv")
text = "Settings"

[node name="Exit" type="Button" parent="Pause/PauseLayer/Control/PauseBox/PauseContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_ne1mv")
text = "Exit"

[node name="Pause" type="Button" parent="Pause/PauseLayer/Control"]
layout_mode = 0
offset_left = 1856.0
offset_top = 24.0
offset_right = 1896.0
offset_bottom = 64.0
text = "||
"

[node name="Machines" type="Node" parent="."]

[node name="PressMachine" parent="Machines" instance=ExtResource("4_0cgrm")]
position = Vector2(285, 398)

[node name="mangler_machine" parent="Machines" instance=ExtResource("5_u21o0")]
position = Vector2(621, 399)

[node name="oven_machine" parent="Machines" instance=ExtResource("6_bl2p0")]
position = Vector2(960, 399)

[node name="deliver_machine" parent="Machines" instance=ExtResource("7_ut65l")]
position = Vector2(1626, 510)

[node name="Injector" parent="Machines" instance=ExtResource("8_2uxys")]
position = Vector2(1289, 398)

[node name="UserManualLayer" type="CanvasLayer" parent="Machines/Injector"]
layer = 6

[node name="BGBlurManual" type="ColorRect" parent="Machines/Injector/UserManualLayer"]
visible = false
material = ExtResource("3_t4tcm")
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_right = 960.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="UserManualPaper" parent="Machines/Injector/UserManualLayer" instance=ExtResource("9_ocgc5")]
visible = false
position = Vector2(960, 544)

[node name="Specimen" type="Node" parent="."]

[node name="Sheep" parent="Specimen" instance=ExtResource("9_rrcwd")]
position = Vector2(816, 981)

[node name="Label" type="Label" parent="."]
offset_left = 866.0
offset_top = 72.0
offset_right = 1057.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 50
text = "Sheep"
horizontal_alignment = 1

[connection signal="pressed" from="Pause/PauseLayer/Control/PauseBox/PauseContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/PauseLayer/Control/PauseBox/PauseContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Pause/PauseLayer/Control/PauseBox/PauseContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Pause/PauseLayer/Control/Pause" to="." method="_on_pause_pressed"]
